plugins {
    id 'java'
    id "org.sonarqube" version "3.3"
    id 'org.springframework.boot' version "2.5.7"
    id 'io.spring.dependency-management' version "1.0.11.RELEASE"
}

sonarqube {
    properties {
        property "sonar.sourceEncoding", "UTF-8"
        property "sonar.projectKey", "ident-pool"
        property "sonar.projectName", "ident-pool"
        property "sonar.organization", "navit"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.project.monorepo.enabled", true
        property "sonar.login", System.getenv("SONAR_TOKEN")
    }
}

bootJar {
    archiveFileName = "app.jar"
}

dependencyManagement {
    imports {
        mavenBom  'org.springframework.cloud:spring-cloud-dependencies:2020.0.4'
    }
}

properties {
    compileJava.options.encoding = 'UTF-8'
}

bootJar {
    archiveFileName = "app.jar"
}

test {
    useJUnitPlatform()
}

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        name = "GitHubPackages"
        url = uri('https://maven.pkg.github.com/navikt/maven-release')
        credentials(PasswordCredentials) {
            password System.getenv("NAV_TOKEN")
            username 'token'
        }
    }
}

java.sourceCompatibility = JavaVersion.VERSION_17

dependencies {
    implementation 'no.nav.testnav.libs:servlet-core'
    implementation 'no.nav.testnav.libs:servlet-security'
    implementation 'no.nav.testnav.libs:database'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-autoconfigure'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-configuration-processor'

    implementation 'org.springframework.cloud:spring-cloud-starter-vault-config'
    implementation 'org.springframework.cloud:spring-cloud-vault-config-databases'
    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap' // TODO remove legacy bootstrap config
    implementation 'org.springframework.retry:spring-retry'

    implementation 'org.aspectj:aspectjweaver'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    implementation 'com.h2database:h2'

    implementation 'org.flywaydb:flyway-core'
    implementation 'org.postgresql:postgresql'
    implementation 'com.google.guava:guava:23.0'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
    implementation 'org.codehaus.woodstox:woodstox-core-asl:4.4.1'
    implementation 'com.fasterxml.woodstox:woodstox-core'
    implementation 'no.nav.repository.fellesreg.tpsws:nav-repository-fellesregister-jaxb-tps-m201-domain:2020.08.27-09.53-183ead3d81eb'
    implementation 'ma.glasnost.orika:orika-core:1.5.4'

    implementation 'org.springdoc:springdoc-openapi-ui:1.5.12'
    implementation 'net.logstash.logback:logstash-logback-encoder:7.0.1'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'no.nav.testnav.libs:testing'

    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
}

description = 'ident-pool'
